[package]
name = "rustlings"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rustlings"
path = "src/main.rs"

[[bin]]
name = "rustlings-tools"
path = "src/tools/main.rs"

[dependencies]
anyhow = "1.0.101"
clap = "4.5.57"
sdl2 = "0.38.0"
sdl3 = { version = "0.17.3", features = ["use-pkg-config"] }
