[package]
name = "rustlings"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rustlings"
path = "src/game/main.rs"

[[bin]]
name = "rustlings-tools"
path = "src/tools/main.rs"

[lints.clippy]
too_many_arguments = "allow"
module_inception = "allow"

[dependencies]
anyhow = "1.0.102"
bitfield-struct = "0.13.0"
bitflags = "2.13.0"
clap = "4.6.1"
sdl3 = "0.18.4"
strum = { version = "0.28.0", features = ["derive"] }
strum_macros = "0.28.0"

[profile.release]
lto = true
